syntax = "proto3";
package api;
option go_package = "api/todopb";

message Todo {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateTodoRequest { Todo todo = 1; }

message CreateTodoResponse { Todo todo = 1; }

service TodoService {
  rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse) {}
}